[package]
name = "generator"
version = "0.1.0"
authors = ["Donough Liu <ldm2993593805@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.6.2"
dotenv = "0.15.0"
regex = "1.3.4"
lazy_static = "1.4.0"
syntect = "3.3.0"