[package]
name = "blogen"
version = "0.1.0"
authors = ["Donough Liu <ldm2993593805@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.14.0"
dotenv = "0.15.0"
once_cell = { version = "1.13.1", features = ["parking_lot"] }
regex = "1.4.5"
syntect = "5.0.0"
